# md5-wasm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.js  index.ts  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/: dependabot.yml
.github/workflows/: benchmark-pages.yml  benchmark.yml  benchmarks.yml  codspeed.yml  pr-checks.yml  release-please.yml
benches/: benchmark.rs  md5gen_wasm.rs
example/: package-lock.json  package.json  vite.config.js
example/src/: crypto.js  hash_wasm_worker.js  main.ts  worker.js
example/src/workers/: hash_wasm.js  md5.js  super_fast_md5.js
examples/: index.html  index.js  package-lock.json  package.json
rust/: Cargo.toml  LICENSE_MIT
rust/benches/: benchmark.rs
rust/src/: lib.rs  utils.rs
rust/tests/: web.rs
src/: lib.rs  utils.rs
tests/: index.bench.ts  index.test.ts  web.rs
