[package]
name = "md5"
version = "0.3.0"
authors = ["tkasuz <tkasuz.dev@gmail.com>"]
edition = "2021"
description = "`md5gen-wasm` is a WebAssembly (Wasm) library for generating MD5 hashes. This project leverages Rust and Wasm to provide a fast and efficient way to compute MD5 hashes directly in the browser or other Wasm-supported environments 🦀"
keywords = ["wasm", "md5", "rust", "file"]
license = "MIT"
repository = "https://github.com/tkasuz/md5-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.71"
wasm-bindgen-futures = "0.4.44"

[dependencies.web-sys]
version = "0.3.67"
features = [
  'console',
  'File',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[[bench]]
name = "benchmark"
harness = false
